--- a/DummyClassSolution/DummyClassSolution/StartSearchPage.resx
+++ b/DummyClassSolution/DummyClassSolution/StartSearchPage.resx
@@ -117,4 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="label1.ToolTip" xml:space="preserve">
+    <value>This controlbox determines the minimum rank to show (ie. tags that match).
+Default value is number of checked tags. 
+Decrease value to widen your search and get more results. (You need to search again)</value>
+  </data>
 </root>
