--- a/DummyClassSolution/DummyClassSolution/StartSearchPage.resx
+++ b/DummyClassSolution/DummyClassSolution/StartSearchPage.resx
@@ -120,6 +120,199 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnSteamStore1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button12.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button13.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button14.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button15.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAVBJREFUOE+VU7GqgmAYdXZoE2oIJxEErUgRWxxcI+egB2jsEXwOh4ZAqE0nfYA2
+        B18hvBehpTeI7/5H/q519RodOPD95zvn+/3AX+jDaDQSQX78DIqirKfTaQmi5vJ7jMdjk4XOs9mMngkN
+        PW5rQ5KkoWEYe2a+/w0/8Q4PvDzWgN3w3RHoJLw81oCJN9M0aT6fd4Ysy6Ldbke+72PAjccaOI5zOx6P
+        dDqdaLFYtAYEQUBxHNeEl8caPAaUZUmXy4XCMKTlclmHPc+jPM/7BzxWALfbLWVZRtfrldI0pSiKqKoq
+        OhwO/68A8fmT2ZlWqxUlSUJFUdT7Q+O99wMedF2XNpsN2bb9q3UOkGX5S9f1l3AX4YGXxxqIojhk2LPf
+        9j6ZTFpBaOjBAy+PtTEYDEx2w1nTtHpnEDU09LjtPdgrXKuqWoKoufwx8JR7nrMg/AAVUPPmK7y8fwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="toolTip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>114, 17</value>
   </metadata>
@@ -132,7 +325,6 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>49</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAkAAAAAAAEAIACBMgAAlgAAAICAAAABACAAKAgBABczAABgYAAAAQAgAKiUAAA/OwEASEgAAAEA
